[package]
name = "geyser"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["cargo"] }
nalgebra = { version = "0.32", features = ["serde-serialize"] }
nalgebra-sparse = "0.9"
isahc = { version = "1.7", features = ["cookies"] }
scraper = "0.17"
form_urlencoded = "1.2"
json = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = { version = "0.11" }
rayon = "1.7"